--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng8aws": {
+    "PocUi": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng8aws",
+            "outputPath": "dist/poc_ui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng8aws:build"
+            "browserTarget": "poc_ui:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng8aws:build:production"
+              "browserTarget": "poc_ui:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng8aws:build"
+            "browserTarget": "poc_ui:build"
           }
         },
         "test": {
@@ -112,16 +112,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng8aws:serve"
+            "devServerTarget": "poc_ui:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng8aws:serve:production"
+              "devServerTarget": "poc_ui:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ng8aws"
+  "defaultProject": "poc_ui"
 }
